syntax = "proto3";

package core;

import "google/protobuf/empty.proto";

option go_package = "internal/pkg/core/model";

message Vote {
    CryptoCurrency CryptoCurrency = 1;
}

message CryptoCurrency {
    string Code = 1;
    string Name = 2;
    int32 Decimals = 3;
    bytes ImageSymbol = 4;
}

message CryptoReply {
    repeated CryptoCurrency criptos = 1;
}

message TotalVotes {
    double votes = 1;
}

service VoteService {
    rpc ReadCryptoCurrencies(google.protobuf.Empty) returns (CryptoReply);
    rpc AddCryptoCurrency(CryptoCurrency) returns (CryptoCurrency);
    rpc UpdateCryptoCurrency(CryptoCurrency) returns (CryptoCurrency);
    rpc RemoveCryptoCurrency(CryptoCurrency) returns (CryptoCurrency);
    rpc SumVotesFromCryptoCurrency(CryptoCurrency) returns (TotalVotes);
    rpc Upvote(Vote) returns (Vote);
    rpc Downvote(Vote) returns (Vote);
}